framec_tests/language_specific/rust/v3_control_flow/positive/while_stack_pop_then_transition_exec.frm
@target rust
// @run-expect: STACK:POP
// @run-expect: TRANSITION:

system S {
    machine:
        $A {
            e() {
                let mut i = 0;
                while i < 1 {
                    $$[-]
                    i += 1;
                }
                -> $B()
            }
        }
        $B { }
}

