framec_tests/language_specific/rust/v3_control_flow/negative/try_forward_and_stack_finally_transition.frm
@target rust
// @expect: E403

system S {
    machine:
        $A {
            e() {
                // Block as a stand-in for try; forward without parent should fail
                {
                    => $^
                    $$[+]
                }
                $$[-]
                -> $B()
            }
        }
        $B { e() { } }
}

